[package]
name = "p2pon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs" }
ggrs = "0.5.1"
structopt = "0.3.25"